@@ -44,6 +44,8 @@ foreach iban {
     BE68539007547034
     BG80BNBG96611020345678
     BH67BMAG00001299123456
+    BR9700360305000010009795493P1
+    BR1800000000141455123924100C2
     CH9300762011623852957
     CY17002001280000001200527600
     CZ6508000000192000145399
@@ -85,6 +87,7 @@ foreach iban {
     NO9386011117947
     PK36SCBL0000001123456702
     PL27114020040000300201355387
+    PS92PALS000000000400123456702
     PT50000201231234567890154
     RO49AAAA1B31007593840000
     RS35260005601001611379
